--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,100 @@
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities;
+/* @layer base {
+  body {
+    @apply bg-conic-gradient-animation;
+    height: h-screen;
+    overflow-x: hidden;
+  }
+}
+body {
+  background: bg-conic-gradient-animation;
+  /* height: 100%; 
+  overflow-x: hidden;
+} */
+/* @layer utilities {
+  @keyframes conicSpin {
+    0% {
+      background-position: 0 50%;
+    }
+
+    50% {
+      background-position: 50% 100%;
+    }
+    /* 75% {
+      background-position: 0% 70%;
+    } 
+    100% {
+      background-position: 0 50%;
+    }
+  }
+
+  .bg-conic-gradient-animation {
+    width: 100%;
+    min-height: 100vh;
+    /* height: 1000vh; 
+    background: linear-gradient(
+      45deg,
+      rgb(148, 126, 198),
+      rgb(246, 234, 237),
+      rgb(196, 241, 245),
+      rgb(181, 101, 237)
+    );
+    background-size: 200% 300%;
+    background-attachment: fixed;
+    animation: conicSpin 12s ease-in-out infinite;
+  }
+}  */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  html,
+  body,
+  #root {
+    height: 100%;
+    margin: 0;
+  }
+
+  body {
+    overflow-x: hidden;
+    position: relative;
+  }
+}
+
+@layer utilities {
+  @keyframes conicSpin {
+    0% {
+      background-position: 0 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0 50%;
+    }
+  }
+
+  .bg-conic-gradient-animation::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+      45deg,
+      rgb(148, 126, 198),
+      rgb(246, 234, 237),
+      rgb(232, 253, 254),
+      rgb(181, 101, 237)
+    );
+    background-size: 300% 550%;
+    animation: conicSpin 16s ease-in-out infinite;
+    z-index: -1; /* Keeps it behind all content */
+    pointer-events: none; /* Allows clicking through */
+  }
+}
