--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,17 @@ body {
       background-position: 0 50%;
     }
   }
-
+  .bgcolor {
+    background: linear-gradient(
+      45deg,
+      rgb(232, 253, 254),
+      rgb(149, 127, 199),
+      rgb(246, 234, 237)
+    );
+    /* border-top-right-radius: rgb(149, 127, 199), 0.2px solid; */
+    /* width: 80px; */
+    border: none;
+  }
   .bg-conic-gradient-animation::before {
     content: "";
     position: fixed;
@@ -87,7 +97,7 @@ body {
     height: 100%;
     background: linear-gradient(
       45deg,
-      rgb(148, 126, 198),
+      rgb(149, 127, 199),
       rgb(246, 234, 237),
       rgb(232, 253, 254),
       rgb(181, 101, 237)
